--- a/pages/customers-list.html
+++ b/pages/customers-list.html
@@ -168,9 +168,9 @@
             </nav>
           </div>
           <div>
-            <button class="btn btn-eureka-primary">
+            <a href="customer-add.html" class="btn btn-eureka-primary">
               <i class="fas fa-plus me-2"></i>Nouveau Client
-            </button>
+            </a>
           </div>
         </div>
 
@@ -233,13 +233,13 @@
                     <td class="text-center"><span class="badge bg-primary">8</span></td>
                     <td class="text-center">
                       <div class="action-buttons">
-                        <button class="btn-action btn-action-view" title="Voir">
+                        <a href="customer-detail.html" class="btn-action btn-action-view" title="Voir">
                           <i class="fas fa-eye"></i>
-                        </button>
-                        <button class="btn-action btn-action-edit" title="Modifier">
+                        </a>
+                        <a href="customer-edit.html" class="btn-action btn-action-edit" title="Modifier">
                           <i class="fas fa-edit"></i>
-                        </button>
-                        <button class="btn-action btn-action-delete" title="Supprimer">
+                        </a>
+                        <button class="btn-action btn-action-delete" title="Supprimer" onclick="confirmDelete(this)">
                           <i class="fas fa-trash"></i>
                         </button>
                       </div>
@@ -255,13 +255,13 @@
                     <td class="text-center"><span class="badge bg-primary">5</span></td>
                     <td class="text-center">
                       <div class="action-buttons">
-                        <button class="btn-action btn-action-view" title="Voir">
+                        <a href="customer-detail.html" class="btn-action btn-action-view" title="Voir">
                           <i class="fas fa-eye"></i>
-                        </button>
-                        <button class="btn-action btn-action-edit" title="Modifier">
+                        </a>
+                        <a href="customer-edit.html" class="btn-action btn-action-edit" title="Modifier">
                           <i class="fas fa-edit"></i>
-                        </button>
-                        <button class="btn-action btn-action-delete" title="Supprimer">
+                        </a>
+                        <button class="btn-action btn-action-delete" title="Supprimer" onclick="confirmDelete(this)">
                           <i class="fas fa-trash"></i>
                         </button>
                       </div>
@@ -277,13 +277,13 @@
                     <td class="text-center"><span class="badge bg-primary">12</span></td>
                     <td class="text-center">
                       <div class="action-buttons">
-                        <button class="btn-action btn-action-view" title="Voir">
+                        <a href="customer-detail.html" class="btn-action btn-action-view" title="Voir">
                           <i class="fas fa-eye"></i>
-                        </button>
-                        <button class="btn-action btn-action-edit" title="Modifier">
+                        </a>
+                        <a href="customer-edit.html" class="btn-action btn-action-edit" title="Modifier">
                           <i class="fas fa-edit"></i>
-                        </button>
-                        <button class="btn-action btn-action-delete" title="Supprimer">
+                        </a>
+                        <button class="btn-action btn-action-delete" title="Supprimer" onclick="confirmDelete(this)">
                           <i class="fas fa-trash"></i>
                         </button>
                       </div>
@@ -323,6 +323,20 @@
         order: [[1, 'asc']]
       });
     });
+    
+    // Delete confirmation
+    function confirmDelete(btn) {
+      const row = $(btn).closest('tr');
+      const clientName = row.find('td:eq(1)').text().trim();
+      
+      if (confirm('Êtes-vous sûr de vouloir supprimer le client "' + clientName + '" ?\n\nCette action est irréversible.')) {
+        alert('Client supprimé avec succès.');
+        // In production, this would make an AJAX call to delete the client
+        row.fadeOut(400, function() {
+          $(this).remove();
+        });
+      }
+    }
   </script>
 </body>
 </html>
