Correction des liens dans files-list.html
- Remplacé file-create.html par file-add.html
- Mis à jour tous les boutons Modifier pour pointer vers file-edit.html

--- a/pages/files-list.html
+++ b/pages/files-list.html
@@ -168,7 +168,7 @@
             </nav>
           </div>
           <div>
-            <a href="file-create.html" class="btn btn-eureka-primary">
+            <a href="file-add.html" class="btn btn-eureka-primary">
               <i class="fas fa-plus me-2"></i>Nouveau Dossier
             </a>
           </div>
@@ -289,9 +289,9 @@
                         <a href="file-details.html" class="btn-action btn-action-view" title="Voir">
                           <i class="fas fa-eye"></i>
                         </a>
-                        <button class="btn-action btn-action-edit" title="Modifier">
+                        <a href="file-edit.html" class="btn-action btn-action-edit" title="Modifier">
                           <i class="fas fa-edit"></i>
-                        </button>
+                        </a>
                         <button class="btn-action btn-action-delete" onclick="deleteRecord(156, 'dossier')" title="Supprimer">
                           <i class="fas fa-trash"></i>
                         </button>
@@ -311,9 +311,9 @@
                         <a href="file-details.html" class="btn-action btn-action-view" title="Voir">
                           <i class="fas fa-eye"></i>
                         </a>
-                        <button class="btn-action btn-action-edit" title="Modifier">
+                        <a href="file-edit.html" class="btn-action btn-action-edit" title="Modifier">
                           <i class="fas fa-edit"></i>
-                        </button>
+                        </a>
                         <button class="btn-action btn-action-delete" onclick="deleteRecord(155, 'dossier')" title="Supprimer">
                           <i class="fas fa-trash"></i>
                         </button>
@@ -333,9 +333,9 @@
                         <a href="file-details.html" class="btn-action btn-action-view" title="Voir">
                           <i class="fas fa-eye"></i>
                         </a>
-                        <button class="btn-action btn-action-edit" title="Modifier">
+                        <a href="file-edit.html" class="btn-action btn-action-edit" title="Modifier">
                           <i class="fas fa-edit"></i>
-                        </button>
+                        </a>
                         <button class="btn-action btn-action-delete" onclick="deleteRecord(154, 'dossier')" title="Supprimer">
                           <i class="fas fa-trash"></i>
                         </button>
@@ -355,9 +355,9 @@
                         <a href="file-details.html" class="btn-action btn-action-view" title="Voir">
                           <i class="fas fa-eye"></i>
                         </a>
-                        <button class="btn-action btn-action-edit" title="Modifier">
+                        <a href="file-edit.html" class="btn-action btn-action-edit" title="Modifier">
                           <i class="fas fa-edit"></i>
-                        </button>
+                        </a>
                         <button class="btn-action btn-action-delete" onclick="deleteRecord(153, 'dossier')" title="Supprimer">
                           <i class="fas fa-trash"></i>
                         </button>
@@ -377,9 +377,9 @@
                         <a href="file-details.html" class="btn-action btn-action-view" title="Voir">
                           <i class="fas fa-eye"></i>
                         </a>
-                        <button class="btn-action btn-action-edit" title="Modifier">
+                        <a href="file-edit.html" class="btn-action btn-action-edit" title="Modifier">
                           <i class="fas fa-edit"></i>
-                        </button>
+                        </a>
                         <button class="btn-action btn-action-delete" onclick="deleteRecord(152, 'dossier')" title="Supprimer">
                           <i class="fas fa-trash"></i>
                         </button>
